[package]
name = "yci"
version = "0.1.0"
authors = ["Andrey Cizov <acizov@gmail.com>"]
edition = "2018"


[lib]
name = "yci"
path = "src/lib.rs"

[[bin]]
name = "ycie"
path = "src/bin.rs"

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
rand = "0.6.4"

mio = "0.6"
mio-extras = "2.0.5"

nom = { version = "4.1.1" }
nom_locate = { version = "0.3.1" }

serde = "1.0.85"
serde_json = "1.0.37"
serde_derive = "1.0.85"

crossbeam = "0.7.1"

bytes = "0.4"

slab = "0.4.2"
